--- a/json.ipynb
+++ b/json.ipynb
@@ -2,251 +2,109 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\r\n",
-      "    \"fruit\": \"Apple\",\r\n",
-      "    \"size\": \"Large\",\r\n",
-      "    \"color\": \"Red\"\r\n",
-      "}\r\n"
+      "{\n",
+      "    \"age\": 45,\n",
+      "    \"cars\": [\n",
+      "        {\n",
+      "            \"model\": \"Audi A1\",\n",
+      "            \"mpg\": 15.1\n",
+      "        },\n",
+      "        {\n",
+      "            \"model\": \"Zeep Compass\",\n",
+      "            \"mpg\": 18.1\n",
+      "        }\n",
+      "    ],\n",
+      "    \"children\": [\n",
+      "        \"Alice\",\n",
+      "        \"Bob\"\n",
+      "    ],\n",
+      "    \"married\": true,\n",
+      "    \"name\": \"Ken\",\n",
+      "    \"pets\": [\n",
+      "        \"Dog\"\n",
+      "    ]\n",
+      "}\n"
      ]
     }
    ],
    "source": [
-    "!cat fruits.json"
+    "import json\n",
+    "\n",
+    "x = {\n",
+    "  \"name\": \"Ken\",\n",
+    "  \"age\": 45,\n",
+    "  \"married\": True,\n",
+    "  \"children\": (\"Alice\",\"Bob\"),\n",
+    "  \"pets\": ['Dog'],\n",
+    "  \"cars\": [\n",
+    "    {\"model\": \"Audi A1\", \"mpg\": 15.1},\n",
+    "    {\"model\": \"Zeep Compass\", \"mpg\": 18.1}\n",
+    "  ]\n",
+    "}\n",
+    "# sorting result in asscending order by keys:\n",
+    "sorted_string = json.dumps(x, indent=4, sort_keys=True)\n",
+    "print(sorted_string)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "with open('fruits.json') as f:\n",
-    "    json_data = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(json_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "size : Large\n",
-      "color : Red\n",
-      "fruit : Apple\n"
+      "{'person': {'name': 'Kenn', 'sex': 'male', 'age': 28}}\n",
+      "Type of dict_obj <class 'dict'>\n",
+      "Person...... {'name': 'Kenn', 'sex': 'male', 'age': 28}\n"
      ]
     }
    ],
    "source": [
-    "for k,v in json_data.items():\n",
-    "    print (k,':',v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Red'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "json_data[\"color\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "with open('quiz.json') as fq:\n",
-    "    json_data2 = json.load(fq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'quiz': {'maths': {'q1': {'answer': '12',\n",
-       "    'options': ['10', '11', '12', '13'],\n",
-       "    'question': '5 + 7 = ?'},\n",
-       "   'q2': {'answer': '4',\n",
-       "    'options': ['1', '2', '3', '4'],\n",
-       "    'question': '12 - 8 = ?'}},\n",
-       "  'sport': {'q1': {'answer': 'Huston Rocket',\n",
-       "    'options': ['New York Bulls',\n",
-       "     'Los Angeles Kings',\n",
-       "     'Golden State Warriros',\n",
-       "     'Huston Rocket'],\n",
-       "    'question': 'Which one is correct team name in NBA?'}}}}"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "json_data2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'sport': {'q1': {'options': ['New York Bulls', 'Los Angeles Kings', 'Golden State Warriros', 'Huston Rocket'], 'answer': 'Huston Rocket', 'question': 'Which one is correct team name in NBA?'}}, 'maths': {'q1': {'options': ['10', '11', '12', '13'], 'answer': '12', 'question': '5 + 7 = ?'}, 'q2': {'options': ['1', '2', '3', '4'], 'answer': '4', 'question': '12 - 8 = ?'}}}\n"
-     ]
-    }
-   ],
-   "source": [
-    "for k,v in json_data2.items():\n",
-    "    print (v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "product_det ='{\"itemid\":1001,\"Description\":\"GPU-LX001\",\"Qty\":1000,\"Price\":5000.00,\"Taxable\":\"True\"}'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(product_det)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "product_obj = json.loads(product_det)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(product_obj)"
+    "  import json  # json library imported\n",
+    "# json data string\n",
+    "person_data = '{  \"person\":  { \"name\":  \"Kenn\",  \"sex\":  \"male\",  \"age\":  28}}'\n",
+    "# Decoding or converting JSON format in dictionary using loads()\n",
+    "dict_obj = json.loads(person_data)\n",
+    "print(dict_obj)\n",
+    "# check type of dict_obj\n",
+    "print(\"Type of dict_obj\", type(dict_obj))\n",
+    "# get human object details\n",
+    "print(\"Person......\",  dict_obj.get('person'))\n",
+    "  \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"a\",\"b\",\"c\",{\"4\":5,\"6\":7}]\n"
+     ]
+    }
+   ],
    "source": [
-    "product_obj_s = json.dumps(product_obj)   # from dict to string"
+    "import json\n",
+    "# Create a List that contains dictionary\n",
+    "lst = ['a', 'b', 'c',{'4': 5, '6': 7}]\n",
+    "# separator used for compact representation of JSON.\n",
+    "# Use of ',' to identify list items\n",
+    "# Use of ':' to identify key and value in dictionary\n",
+    "compact_obj = json.dumps(lst, separators=(',', ':'))\n",
+    "print(compact_obj)\n",
+    "\n"
    ]
   },
   {
@@ -255,79 +113,83 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"a\": 4,\n",
+      "    \"b\": 5\n",
+      "}\n"
+     ]
     }
    ],
    "source": [
-    "type(product_obj_s)"
+    "#Format JSON code (Pretty print)\n",
+    "import json\n",
+    "dic = { 'a': 4, 'b': 5 }\n",
+    "''' To format the code use of indent and 4 shows number of space and use of separator is not necessary but standard way to write code of particular function. '''\n",
+    "formatted_obj = json.dumps(dic, indent=4, separators=(',', ': '))\n",
+    "print(formatted_obj)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "emp = {}\n",
-    "emp[\"empid\"] = 1001\n",
-    "emp[\"fullname\"] = \"Abc xyz\"\n",
-    "emp[\"salary\"] = 50000.00\n",
-    "emp[\"skill\"] = \"Data Analytics\"\n",
-    "empfile = open(\"employee.txt\",\"w\")\n",
-    "json.dump(emp,empfile)\n",
-    "empfile.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"empid\": 1001, \"fullname\": \"Abc xyz\", \"salary\": 50000.0, \"skill\": \"Data Analytics\"}"
+      "{\n",
+      "    \"age\": 45,\n",
+      "    \"cars\": [\n",
+      "        {\n",
+      "            \"model\": \"Audi A1\",\n",
+      "            \"mpg\": 15.1\n",
+      "        },\n",
+      "        {\n",
+      "            \"model\": \"Zeep Compass\",\n",
+      "            \"mpg\": 18.1\n",
+      "        }\n",
+      "    ],\n",
+      "    \"children\": [\n",
+      "        \"Alice\",\n",
+      "        \"Bob\"\n",
+      "    ],\n",
+      "    \"married\": true,\n",
+      "    \"name\": \"Ken\",\n",
+      "    \"pets\": [\n",
+      "        \"Dog\"\n",
+      "    ]\n",
+      "}\n"
      ]
     }
    ],
    "source": [
-    "!cat employee.txt"
+    "#Ordering the JSON code\n",
+    "import json\n",
+    "\n",
+    "x = {\n",
+    "  \"name\": \"Ken\",\n",
+    "  \"age\": 45,\n",
+    "  \"married\": True,\n",
+    "  \"children\": (\"Alice\", \"Bob\"),\n",
+    "  \"pets\": [ 'Dog' ],\n",
+    "  \"cars\": [\n",
+    "    {\"model\": \"Audi A1\", \"mpg\": 15.1},\n",
+    "    {\"model\": \"Zeep Compass\", \"mpg\": 18.1}\n",
+    "  \t],\n",
+    "}\n",
+    "# sorting result in asscending order by keys:\n",
+    "sorted_string = json.dumps(x, indent=4, sort_keys=True)\n",
+    "print(sorted_string)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
